kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__fn_ty_annotation_recovery_23.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"a:(str|int, int|) ->\"#)"
---
Module {
    filename: "",
    pkg: "",
    doc: None,
    name: "",
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Identifier {
                                names: [
                                    Node {
                                        node: "a",
                                        filename: "",
                                        line: 1,
                                        column: 0,
                                        end_line: 1,
                                        end_column: 1,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Store,
                            },
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 1,
                        },
                    ],
                    value: Node {
                        node: Missing(
                            MissingExpr,
                        ),
                        filename: "",
                        line: 1,
                        column: 20,
                        end_line: 1,
                        end_column: 20,
                    },
                    type_annotation: Some(
                        Node {
                            node: "(str | int, int | any, any, any)",
                            filename: "",
                            line: 1,
                            column: 2,
                            end_line: 1,
                            end_column: 20,
                        },
                    ),
                    ty: Some(
                        Node {
                            node: Function(
                                FunctionType {
                                    params_ty: Some(
                                        [
                                            Node {
                                                node: Union(
                                                    UnionType {
                                                        type_elements: [
                                                            Node {
                                                                node: Basic(
                                                                    Str,
                                                                ),
                                                                filename: "",
                                                                line: 1,
                                                                column: 3,
                                                                end_line: 1,
                                                                end_column: 6,
                                                            },
                                                            Node {
                                                                node: Basic(
                                                                    Int,
                                                                ),
                                                                filename: "",
                                                                line: 1,
                                                                column: 7,
                                                                end_line: 1,
                                                                end_column: 10,
                                                            },
                                                        ],
                                                    },
                                                ),
                                                filename: "",
                                                line: 1,
                                                column: 3,
                                                end_line: 1,
                                                end_column: 10,
                                            },
                                            Node {
                                                node: Union(
                                                    UnionType {
                                                        type_elements: [
                                                            Node {
                                                                node: Basic(
                                                                    Int,
                                                                ),
                                                                filename: "",
                                                                line: 1,
                                                                column: 12,
                                                                end_line: 1,
                                                                end_column: 15,
                                                            },
                                                            Node {
                                                                node: Any,
                                                                filename: "",
                                                                line: 1,
                                                                column: 16,
                                                                end_line: 1,
                                                                end_column: 17,
                                                            },
                                                        ],
                                                    },
                                                ),
                                                filename: "",
                                                line: 1,
                                                column: 12,
                                                end_line: 1,
                                                end_column: 17,
                                            },
                                            Node {
                                                node: Any,
                                                filename: "",
                                                line: 1,
                                                column: 18,
                                                end_line: 1,
                                                end_column: 20,
                                            },
                                            Node {
                                                node: Any,
                                                filename: "",
                                                line: 1,
                                                column: 20,
                                                end_line: 1,
                                                end_column: 20,
                                            },
                                        ],
                                    ),
                                    ret_ty: None,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 2,
                            end_line: 1,
                            end_column: 20,
                        },
                    ),
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 1,
        },
    ],
    comments: [],
}

