kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__fn_ty_annotation_recovery_3.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"a:i)\"#)"
---
Module {
    filename: "",
    pkg: "",
    doc: None,
    name: "",
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Identifier {
                                names: [
                                    Node {
                                        node: "a",
                                        filename: "",
                                        line: 1,
                                        column: 0,
                                        end_line: 1,
                                        end_column: 1,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Store,
                            },
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 1,
                        },
                    ],
                    value: Node {
                        node: Missing(
                            MissingExpr,
                        ),
                        filename: "",
                        line: 1,
                        column: 3,
                        end_line: 1,
                        end_column: 4,
                    },
                    type_annotation: Some(
                        Node {
                            node: "i",
                            filename: "",
                            line: 1,
                            column: 2,
                            end_line: 1,
                            end_column: 3,
                        },
                    ),
                    ty: Some(
                        Node {
                            node: Named(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "i",
                                            filename: "",
                                            line: 1,
                                            column: 2,
                                            end_line: 1,
                                            end_column: 3,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 2,
                            end_line: 1,
                            end_column: 3,
                        },
                    ),
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 1,
        },
    ],
    comments: [],
}

