kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__fn_ty_annotation_recovery_7.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"a:([int]\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Target {
                                name: Node {
                                    node: "a",
                                    filename: "",
                                    line: 1,
                                    column: 0,
                                    end_line: 1,
                                    end_column: 1,
                                },
                                paths: [],
                                pkgpath: "",
                            },
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 1,
                        },
                    ],
                    value: Node {
                        node: Missing(
                            MissingExpr,
                        ),
                        filename: "",
                        line: 1,
                        column: 8,
                        end_line: 1,
                        end_column: 8,
                    },
                    ty: Some(
                        Node {
                            node: Function(
                                FunctionType {
                                    params_ty: Some(
                                        [
                                            Node {
                                                node: List(
                                                    ListType {
                                                        inner_type: Some(
                                                            Node {
                                                                node: Basic(
                                                                    Int,
                                                                ),
                                                                filename: "",
                                                                line: 1,
                                                                column: 4,
                                                                end_line: 1,
                                                                end_column: 7,
                                                            },
                                                        ),
                                                    },
                                                ),
                                                filename: "",
                                                line: 1,
                                                column: 3,
                                                end_line: 1,
                                                end_column: 8,
                                            },
                                            Node {
                                                node: Any,
                                                filename: "",
                                                line: 1,
                                                column: 8,
                                                end_line: 1,
                                                end_column: 8,
                                            },
                                        ],
                                    ),
                                    ret_ty: None,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 2,
                            end_line: 1,
                            end_column: 8,
                        },
                    ),
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 1,
        },
    ],
    comments: [],
}
